// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationItem renders correctly 1`] = `
<div class="notification-wrap" style="background-color: rgb(208, 227, 254);">
  <div class="notification-wrap__content-area">
    <div class="notification-wrap__content-area__image"><svg></svg></div>
    <div class="notification-wrap__content-area__message-area">
      <p class="notification-wrap__content-area__message"></p>
      <!---->
    </div>
  </div>
  <div class="notification-wrap__buttons-group"><span class="notification-wrap__buttons-group__close"><svg></svg></span></div>
</div>
`;

exports[`NotificationItem renders correctly with error props 1`] = `
<div class="notification-wrap" style="background-color: rgb(255, 212, 210);">
  <div class="notification-wrap__content-area">
    <div class="notification-wrap__content-area__image"><svg></svg></div>
    <div class="notification-wrap__content-area__message-area">
      <p class="notification-wrap__content-area__message">testMessage</p>
      <!---->
    </div>
  </div>
  <div class="notification-wrap__buttons-group"><span class="notification-wrap__buttons-group__close"><svg></svg></span></div>
</div>
`;

exports[`NotificationItem renders correctly with notification props 1`] = `
<div class="notification-wrap" style="background-color: rgb(208, 227, 254);">
  <div class="notification-wrap__content-area">
    <div class="notification-wrap__content-area__image"><svg></svg></div>
    <div class="notification-wrap__content-area__message-area">
      <p class="notification-wrap__content-area__message">testMessage</p>
      <!---->
    </div>
  </div>
  <div class="notification-wrap__buttons-group"><span class="notification-wrap__buttons-group__close"><svg></svg></span></div>
</div>
`;

exports[`NotificationItem renders correctly with success props 1`] = `
<div class="notification-wrap" style="background-color: rgb(219, 241, 211);">
  <div class="notification-wrap__content-area">
    <div class="notification-wrap__content-area__image"><svg></svg></div>
    <div class="notification-wrap__content-area__message-area">
      <p class="notification-wrap__content-area__message">testMessage</p>
      <!---->
    </div>
  </div>
  <div class="notification-wrap__buttons-group"><span class="notification-wrap__buttons-group__close"><svg></svg></span></div>
</div>
`;

exports[`NotificationItem renders correctly with support link 1`] = `
<div class="notification-wrap" style="background-color: rgb(208, 227, 254);">
  <div class="notification-wrap__content-area">
    <div class="notification-wrap__content-area__image"><svg></svg></div>
    <div class="notification-wrap__content-area__message-area">
      <p class="notification-wrap__content-area__message">testMessage support rest of message</p> <a href="https://requestUrl.com" target="_blank" class="notification-wrap__content-area__link">
        https://requestUrl.com
      </a>
    </div>
  </div>
  <div class="notification-wrap__buttons-group"><span class="notification-wrap__buttons-group__close"><svg></svg></span></div>
</div>
`;

exports[`NotificationItem renders correctly with warning props 1`] = `
<div class="notification-wrap" style="background-color: rgb(252, 248, 227);">
  <div class="notification-wrap__content-area">
    <div class="notification-wrap__content-area__image"><svg></svg></div>
    <div class="notification-wrap__content-area__message-area">
      <p class="notification-wrap__content-area__message">testMessage</p>
      <!---->
    </div>
  </div>
  <div class="notification-wrap__buttons-group"><span class="notification-wrap__buttons-group__close"><svg></svg></span></div>
</div>
`;
